# Matrices-y-Tableros

./: README.md
Matrices-Tableros/: CMakeLists.txt  main  main.cpp
Matrices-Tableros/src/: solucion.cpp  solucion.h
